oaklang.js
// @generated by Peggy 4.0.3.
//
// https://peggyjs.org/


function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
      ? this.location.source.offset(s)
      : s;
    var loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", offset_s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + offset_s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { Start: peg$parseStart };
  var peg$startRuleFunction = peg$parseStart;

  var peg$c0 = "break;";
  var peg$c1 = "continue;";
  var peg$c2 = "return";
  var peg$c3 = ";";
  var peg$c4 = "{";
  var peg$c5 = "}";
  var peg$c6 = "if";
  var peg$c7 = "(";
  var peg$c8 = ")";
  var peg$c9 = "else if";
  var peg$c10 = "else";
  var peg$c11 = "switch";
  var peg$c12 = "case";
  var peg$c13 = ":";
  var peg$c14 = "break";
  var peg$c15 = "default";
  var peg$c16 = "while";
  var peg$c17 = "for";
  var peg$c18 = "=";
  var peg$c19 = "var";
  var peg$c20 = "[]";
  var peg$c21 = "[";
  var peg$c22 = "]";
  var peg$c23 = "?";
  var peg$c24 = "||";
  var peg$c25 = "&&";
  var peg$c26 = "==";
  var peg$c27 = "!=";
  var peg$c28 = "<=";
  var peg$c29 = ">=";
  var peg$c30 = "new";
  var peg$c31 = "null";
  var peg$c32 = ",";
  var peg$c33 = "//";
  var peg$c34 = "/*";
  var peg$c35 = "*/";
  var peg$c36 = "false";
  var peg$c37 = "true";
  var peg$c38 = "\"";
  var peg$c39 = "\u2018";
  var peg$c40 = "\u2019";
  var peg$c41 = ".";
  var peg$c42 = "+";
  var peg$c43 = "-";
  var peg$c44 = "*";
  var peg$c45 = "/";
  var peg$c46 = "%";
  var peg$c47 = "+=";
  var peg$c48 = "-=";
  var peg$c49 = "++";
  var peg$c50 = "--";
  var peg$c51 = ">";
  var peg$c52 = "<";
  var peg$c53 = "!";
  var peg$c54 = "int";
  var peg$c55 = "float";
  var peg$c56 = "string";
  var peg$c57 = "bool";
  var peg$c58 = "char";

  var peg$r0 = /^[<>]/;
  var peg$r1 = /^[+\-]/;
  var peg$r2 = /^[%*\/]/;
  var peg$r3 = /^[!\-]/;
  var peg$r4 = /^[.\n]/;
  var peg$r5 = /^[ \t\n\r]/;
  var peg$r6 = /^[a-zA-Z_]/;
  var peg$r7 = /^[a-zA-Z_0-9]/;
  var peg$r8 = /^["]/;
  var peg$r9 = /^[a-zA-Z0-9]/;
  var peg$r10 = /^[0-9]/;

  var peg$e0 = peg$literalExpectation("break;", false);
  var peg$e1 = peg$literalExpectation("continue;", false);
  var peg$e2 = peg$literalExpectation("return", false);
  var peg$e3 = peg$literalExpectation(";", false);
  var peg$e4 = peg$literalExpectation("{", false);
  var peg$e5 = peg$literalExpectation("}", false);
  var peg$e6 = peg$literalExpectation("if", false);
  var peg$e7 = peg$literalExpectation("(", false);
  var peg$e8 = peg$literalExpectation(")", false);
  var peg$e9 = peg$literalExpectation("else if", false);
  var peg$e10 = peg$literalExpectation("else", false);
  var peg$e11 = peg$literalExpectation("switch", false);
  var peg$e12 = peg$literalExpectation("case", false);
  var peg$e13 = peg$literalExpectation(":", false);
  var peg$e14 = peg$literalExpectation("break", false);
  var peg$e15 = peg$literalExpectation("default", false);
  var peg$e16 = peg$literalExpectation("while", false);
  var peg$e17 = peg$literalExpectation("for", false);
  var peg$e18 = peg$literalExpectation("=", false);
  var peg$e19 = peg$literalExpectation("var", false);
  var peg$e20 = peg$literalExpectation("[]", false);
  var peg$e21 = peg$literalExpectation("[", false);
  var peg$e22 = peg$literalExpectation("]", false);
  var peg$e23 = peg$literalExpectation("?", false);
  var peg$e24 = peg$literalExpectation("||", false);
  var peg$e25 = peg$literalExpectation("&&", false);
  var peg$e26 = peg$literalExpectation("==", false);
  var peg$e27 = peg$literalExpectation("!=", false);
  var peg$e28 = peg$literalExpectation("<=", false);
  var peg$e29 = peg$literalExpectation(">=", false);
  var peg$e30 = peg$classExpectation(["<", ">"], false, false);
  var peg$e31 = peg$classExpectation(["+", "-"], false, false);
  var peg$e32 = peg$classExpectation(["%", "*", "/"], false, false);
  var peg$e33 = peg$classExpectation(["!", "-"], false, false);
  var peg$e34 = peg$literalExpectation("new", false);
  var peg$e35 = peg$literalExpectation("null", false);
  var peg$e36 = peg$literalExpectation(",", false);
  var peg$e37 = peg$literalExpectation("//", false);
  var peg$e38 = peg$anyExpectation();
  var peg$e39 = peg$literalExpectation("/*", false);
  var peg$e40 = peg$classExpectation([".", "\n"], false, false);
  var peg$e41 = peg$literalExpectation("*/", false);
  var peg$e42 = peg$otherExpectation("whitespace");
  var peg$e43 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false);
  var peg$e44 = peg$classExpectation([["a", "z"], ["A", "Z"], "_"], false, false);
  var peg$e45 = peg$classExpectation([["a", "z"], ["A", "Z"], "_", ["0", "9"]], false, false);
  var peg$e46 = peg$literalExpectation("false", false);
  var peg$e47 = peg$literalExpectation("true", false);
  var peg$e48 = peg$literalExpectation("\"", false);
  var peg$e49 = peg$classExpectation(["\""], false, false);
  var peg$e50 = peg$literalExpectation("\u2018", false);
  var peg$e51 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"]], false, false);
  var peg$e52 = peg$literalExpectation("\u2019", false);
  var peg$e53 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e54 = peg$literalExpectation(".", false);
  var peg$e55 = peg$literalExpectation("+", false);
  var peg$e56 = peg$literalExpectation("-", false);
  var peg$e57 = peg$literalExpectation("*", false);
  var peg$e58 = peg$literalExpectation("/", false);
  var peg$e59 = peg$literalExpectation("%", false);
  var peg$e60 = peg$literalExpectation("+=", false);
  var peg$e61 = peg$literalExpectation("-=", false);
  var peg$e62 = peg$literalExpectation("++", false);
  var peg$e63 = peg$literalExpectation("--", false);
  var peg$e64 = peg$literalExpectation(">", false);
  var peg$e65 = peg$literalExpectation("<", false);
  var peg$e66 = peg$literalExpectation("!", false);
  var peg$e67 = peg$literalExpectation("int", false);
  var peg$e68 = peg$literalExpectation("float", false);
  var peg$e69 = peg$literalExpectation("string", false);
  var peg$e70 = peg$literalExpectation("bool", false);
  var peg$e71 = peg$literalExpectation("char", false);

  var peg$f0 = function(left, right) { return { type: "LogicalOr", left: left, right: right }; };
  var peg$f1 = function(left, right) { return { type: "LogicalAnd", left: left, right: right }; };
  var peg$f2 = function(left, right) { return { type: "Equality", operator: text(), left: left, right: right }; };
  var peg$f3 = function(left, right) { return { type: "Relational", operator: text(), left: left, right: right }; };
  var peg$f4 = function(left, right) { return { type: "Additive", operator: text(), left: left, right: right }; };
  var peg$f5 = function(left, right) { return { type: "Multiplicative", operator: text(), left: left, right: right }; };
  var peg$f6 = function(expr) { return { type: "Unary", operator: text(), expression: expr }; };
  var peg$f7 = function(required, optional) { return required + optional.join("");  };
  var peg$f8 = function() { return false; };
  var peg$f9 = function() { return true; };
  var peg$f10 = function(content) { return content.flat().filter(item => item !== undefined).join(""); };
  var peg$f11 = function(char) { return char; };
  var peg$f12 = function(float) { return float; };
  var peg$f13 = function(integer) { return integer; };
  var peg$f14 = function(digits) { return parseInt(digits.join(""), 10); };
  var peg$f15 = function(digits, decimals) { return parseFloat(digits.join("") + "." + decimals.join(""), 10); };
  var peg$f16 = function() { return "+"; };
  var peg$f17 = function() { return "-"; };
  var peg$f18 = function() { return "*"; };
  var peg$f19 = function() { return "/"; };
  var peg$f20 = function() { return "%"; };
  var peg$f21 = function() { return "="; };
  var peg$f22 = function() { return "+="; };
  var peg$f23 = function() { return "-="; };
  var peg$f24 = function() { return "++"; };
  var peg$f25 = function() { return "--"; };
  var peg$f26 = function() { return "=="; };
  var peg$f27 = function() { return "!="; };
  var peg$f28 = function() { return ">="; };
  var peg$f29 = function() { return "<="; };
  var peg$f30 = function() { return ">"; };
  var peg$f31 = function() { return "<"; };
  var peg$f32 = function() { return "&&"; };
  var peg$f33 = function() { return "||"; };
  var peg$f34 = function() { return "!"; };
  var peg$f35 = function() { return "int"; };
  var peg$f36 = function() { return "float"; };
  var peg$f37 = function() { return "string"; };
  var peg$f38 = function() { return "bool"; };
  var peg$f39 = function() { return "char"; };
  var peg$currPos = options.peg$currPos | 0;
  var peg$savedPos = peg$currPos;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = peg$currPos;
  var peg$maxFailExpected = options.peg$maxFailExpected || [];
  var peg$silentFails = options.peg$silentFails | 0;

  var peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    var res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseStart() {
    var s0, s1;

    s0 = [];
    s1 = peg$parseStatement();
    while (s1 !== peg$FAILED) {
      s0.push(s1);
      s1 = peg$parseStatement();
    }

    return s0;
  }

  function peg$parseStatement() {
    var s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$parseBlock();
    if (s0 === peg$FAILED) {
      s0 = peg$parseIfStatement();
      if (s0 === peg$FAILED) {
        s0 = peg$parseSwitchStatement();
        if (s0 === peg$FAILED) {
          s0 = peg$parseWhileStatement();
          if (s0 === peg$FAILED) {
            s0 = peg$parseForStatement();
            if (s0 === peg$FAILED) {
              s0 = peg$currPos;
              s1 = peg$parse_();
              if (input.substr(peg$currPos, 6) === peg$c0) {
                s2 = peg$c0;
                peg$currPos += 6;
              } else {
                s2 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$e0); }
              }
              if (s2 !== peg$FAILED) {
                s1 = [s1, s2];
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
              if (s0 === peg$FAILED) {
                s0 = peg$currPos;
                s1 = peg$parse_();
                if (input.substr(peg$currPos, 9) === peg$c1) {
                  s2 = peg$c1;
                  peg$currPos += 9;
                } else {
                  s2 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$e1); }
                }
                if (s2 !== peg$FAILED) {
                  s1 = [s1, s2];
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
                if (s0 === peg$FAILED) {
                  s0 = peg$currPos;
                  s1 = peg$parse_();
                  if (input.substr(peg$currPos, 6) === peg$c2) {
                    s2 = peg$c2;
                    peg$currPos += 6;
                  } else {
                    s2 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$e2); }
                  }
                  if (s2 !== peg$FAILED) {
                    s3 = peg$parse_();
                    s4 = peg$parseLogicalTernaryExpr();
                    if (s4 !== peg$FAILED) {
                      s5 = peg$parse_();
                      if (input.charCodeAt(peg$currPos) === 59) {
                        s6 = peg$c3;
                        peg$currPos++;
                      } else {
                        s6 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$e3); }
                      }
                      if (s6 !== peg$FAILED) {
                        s1 = [s1, s2, s3, s4, s5, s6];
                        s0 = s1;
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                  if (s0 === peg$FAILED) {
                    s0 = peg$parseAssignment();
                  }
                }
              }
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parseBlock() {
    var s0, s1, s2, s3, s4, s5, s6, s7;

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (input.charCodeAt(peg$currPos) === 123) {
      s2 = peg$c4;
      peg$currPos++;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e4); }
    }
    if (s2 !== peg$FAILED) {
      s3 = peg$parse_();
      s4 = [];
      s5 = peg$parseStatement();
      while (s5 !== peg$FAILED) {
        s4.push(s5);
        s5 = peg$parseStatement();
      }
      s5 = peg$parse_();
      if (input.charCodeAt(peg$currPos) === 125) {
        s6 = peg$c5;
        peg$currPos++;
      } else {
        s6 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e5); }
      }
      if (s6 !== peg$FAILED) {
        s7 = peg$parse_();
        s1 = [s1, s2, s3, s4, s5, s6, s7];
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseIfStatement() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13, s14;

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (input.substr(peg$currPos, 2) === peg$c6) {
      s2 = peg$c6;
      peg$currPos += 2;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e6); }
    }
    if (s2 !== peg$FAILED) {
      s3 = peg$parse_();
      if (input.charCodeAt(peg$currPos) === 40) {
        s4 = peg$c7;
        peg$currPos++;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e7); }
      }
      if (s4 !== peg$FAILED) {
        s5 = peg$parse_();
        s6 = peg$parseLogicalTernaryExpr();
        if (s6 !== peg$FAILED) {
          s7 = peg$parse_();
          if (input.charCodeAt(peg$currPos) === 41) {
            s8 = peg$c8;
            peg$currPos++;
          } else {
            s8 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e8); }
          }
          if (s8 !== peg$FAILED) {
            s9 = peg$parse_();
            s10 = peg$parseBlock();
            if (s10 !== peg$FAILED) {
              s11 = peg$parse_();
              s12 = [];
              s13 = peg$parseElseIfStatement();
              while (s13 !== peg$FAILED) {
                s12.push(s13);
                s13 = peg$parseElseIfStatement();
              }
              s13 = peg$parse_();
              s14 = peg$parseElseStatement();
              if (s14 === peg$FAILED) {
                s14 = null;
              }
              s1 = [s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13, s14];
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseElseIfStatement() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10;

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (input.substr(peg$currPos, 7) === peg$c9) {
      s2 = peg$c9;
      peg$currPos += 7;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e9); }
    }
    if (s2 !== peg$FAILED) {
      s3 = peg$parse_();
      if (input.charCodeAt(peg$currPos) === 40) {
        s4 = peg$c7;
        peg$currPos++;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e7); }
      }
      if (s4 !== peg$FAILED) {
        s5 = peg$parse_();
        s6 = peg$parseLogicalTernaryExpr();
        if (s6 !== peg$FAILED) {
          s7 = peg$parse_();
          if (input.charCodeAt(peg$currPos) === 41) {
            s8 = peg$c8;
            peg$currPos++;
          } else {
            s8 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e8); }
          }
          if (s8 !== peg$FAILED) {
            s9 = peg$parse_();
            s10 = peg$parseBlock();
            if (s10 !== peg$FAILED) {
              s1 = [s1, s2, s3, s4, s5, s6, s7, s8, s9, s10];
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseElseStatement() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (input.substr(peg$currPos, 4) === peg$c10) {
      s2 = peg$c10;
      peg$currPos += 4;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e10); }
    }
    if (s2 !== peg$FAILED) {
      s3 = peg$parse_();
      s4 = peg$parseBlock();
      if (s4 !== peg$FAILED) {
        s1 = [s1, s2, s3, s4];
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseSwitchStatement() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13, s14, s15;
